# jolt

./: .gitignore  .gitmodules  BENCHMARKING.md  BENCHMARKS.md  BN254_GT_EXP_INLINE_DESIGN.md  BN254_GT_INLINES.md  Cargo.toml  HACHI_INTEGRATION.md  INSTRUCTIONS.md  README.md  WIRING_SUMCHECK_PLAN.md  cycle-counts.md  grumpkin-msm-provable-plan.md  rust-toolchain.toml  state-handoff.md
.config/: nextest.toml
.github/workflows/: deploy-mdbook.yml  rust.yml
benchmark-runs/: BENCHMARK_GUIDE.md  ra_virtual_naive_vs_opt_bench_2026-01-14.md  spartan_outer_sha2_chain_report.md  spartan_outer_sha2_chain_report_with_uniskip.md  spartan_outer_stage1_kind_impl_plan.md  sumcheck_breakdown_analysis.md
book/: book.toml
book/src/: SUMMARY.md
book/src/how/: proof_overview.md
book/src/how/architecture/: architecture.md  jolt_dag.md
book/src/spec/: instructions.md  overview.md  proof_overview.md  r1cs.md  subtables.md
common/src/: constants.rs  rv_trace.rs
docs/: ios.md
examples/fibonacci/src/: main.rs
examples/msm/guest/src/: lib.rs
examples/msm/src/: main.rs
examples/recursion/: CYCLE_ANALYSIS.md  Cargo.toml
examples/recursion/guest/: Cargo.toml
examples/recursion/guest/src/: lib.rs
examples/recursion/src/: main.rs
examples/sha2-chain/: Cargo.toml
examples/sha2-chain/guest/src/: lib.rs
examples/sha2-chain/src/: bench.rs
jolt-core/: Cargo.toml
jolt-core/benches/: binding.rs  compute_cubic.rs  degree2_sumcheck.rs  degree2_sumcheck_plot.py  degree2_sumcheck_speedup.md  degree2_with_eq_sumcheck.rs  e2e_profiling.rs  e2e_sumcheck.rs  field_ops.rs  large_d_mul.rs  large_d_sumcheck.rs  linear_combinations.rs  mles_product_sum.rs  msm_performance.rs  multivariate_product.rs  ra_sumcheck.rs  small_value.rs  spartan.rs  spartan_first_sumcheck.rs  spartan_outer.rs  spartan_sumcheck.rs  spartan_svo.md  spartan_svo_plot.py  univariate_product.rs
jolt-core/src/: curve.rs  lib.rs
jolt-core/src/benches/: bench.rs
jolt-core/src/field/: ark.rs  folded_accum.rs  fp128.rs  mod.rs  tracked_ark.rs
jolt-core/src/field/challenge/: mont_ark_u254.rs
jolt-core/src/guest/: prover.rs  verifier.rs
jolt-core/src/host/: mod.rs  program.rs
jolt-core/src/jolt/instruction/: lb.rs  sw.rs
jolt-core/src/jolt/vm/: bytecode.rs  mod.rs  rv32i_vm.rs
jolt-core/src/msm/: mod.rs
jolt-core/src/poly/: compact_polynomial.rs  dense_interleaved_poly.rs  dense_mlpoly.rs  eq_poly.rs  identity_poly.rs  lagrange_poly.rs  lt_poly.rs  matrix_layout.rs  mod.rs  multilinear_polynomial.rs  multiquadratic_poly.rs  one_hot_polynomial.rs  opening_proof.rs  prefix_suffix.rs  ra_poly.rs  rlc_polynomial.rs  shared_ra_polys.rs  spartan_interleaved_poly.rs  split_eq_poly.rs  split_lt_poly.rs  streaming.rs  unipoly.rs
jolt-core/src/poly/commitment/: commitment_scheme.rs  dory.rs  hyperkzg.rs  hyrax.rs  mock.rs  mod.rs
jolt-core/src/r1cs/: builder.rs  constraints.rs  key.rs  ops.rs  spartan.rs
jolt-core/src/subprotocols/: booleanity.rs  booleanity_new.rs  claim_reduction.rs  constraint_list_sumcheck.rs  hamming_weight.rs  large_degree_sumcheck.rs  mles_product_sum.rs  mod.rs  multivariate.rs  round_compression.rs  sparse_grand_product.rs  streaming_sumcheck.rs  sumcheck.rs  sumcheck_prover.rs  sumcheck_verifier.rs  toom.rs  univariate.rs
jolt-core/src/subprotocols/read_write_matrix/: registers.rs
jolt-core/src/transcripts/: blake2b.rs  keccak.rs
jolt-core/src/utils/: accumulation.rs  dag_generator.rs  expanding_table.rs  mod.rs  small_value.rs  thread.rs
jolt-core/src/zkvm/: config.rs  guest_serde.rs  mod.rs  program.rs  proof_serialization.rs  prover.rs  recursion_proof_bundle.rs  serialized_bundle.rs  streaming_decode.rs  streaming_verifier.rs  tests.rs  verifier.rs  witness.rs
jolt-core/src/zkvm/bytecode/: mod.rs  read_raf_checking.rs
jolt-core/src/zkvm/claim_reductions/: advice.rs  bytecode.rs  hamming_weight.rs  increments.rs  program_image.rs
jolt-core/src/zkvm/dag/: jolt_dag.rs
jolt-core/src/zkvm/instruction_lookups/: mod.rs  ra_virtual.rs  read_raf_checking.rs
jolt-core/src/zkvm/r1cs/: builder.rs  constraints.rs  evaluation.rs  key.rs
jolt-core/src/zkvm/ram/: hamming_booleanity.rs  mod.rs  output_check.rs  ra_reduction.rs  ra_virtual.rs  raf_evaluation.rs  read_write_checking.rs  read_write_checking_addr_first.rs  sparse_matrix_poly_addr_first.rs  val_evaluation.rs
jolt-core/src/zkvm/recursion/: FUSED_WIRING_BACKEND.md  NO_HINTS_DORY_MIGRATION_PLAN.md  api.rs  bijection.rs  combine_dag.rs  constraints_sys.rs  curve.rs  fused_virtual_polynomials_porting_plan.md  metadata.rs  miller_loop_front_alignment_refactor.md  mod.rs  prefix_packing.rs  prover.rs  recursion_prover.rs  (+9 more)
jolt-inlines/blake2/src/: sdk.rs
jolt-inlines/dory-gt-exp/: Cargo.toml
jolt-inlines/dory-gt-exp/src/: host.rs  lib.rs  sdk.rs  sequence_builder.rs
jolt-inlines/grumpkin/: Cargo.toml
jolt-inlines/grumpkin/src/: lib.rs
jolt-inlines/grumpkin_msm/: Cargo.toml
jolt-inlines/grumpkin_msm/src/: lib.rs  sdk.rs  sequence_builder.rs  types.rs
jolt-inlines/grumpkin_msm/src/provable/: curve.rs  fq.rs  mod.rs  msm.rs  tests.rs
jolt-inlines/msm/: Cargo.toml
jolt-inlines/msm/src/: fixed_base.rs  glv.rs  lib.rs  pippenger.rs  scalar.rs  traits.rs
jolt-recursion/: Cargo.toml  README.md
jolt-recursion/src/: lib.rs
jolt-recursion/src/zkvm/: _path_anchor.rs
jolt-recursion/tests/: dory_combine_witness.rs  recursion_roundtrip.rs
jolt-sdk/: Cargo.toml
jolt-sdk/macros/src/: lib.rs
jolt-sdk/src/: decompression.rs  host_utils.rs
jolt-sdk/tests/: verifier_api.rs
python/: plot_benchmarks.py
scripts/: analyze_trace.py  build-ios.sh  build_graph.py
tools/profiler/: Cargo.toml
tools/profiler/src/: main.rs
tracer/src/utils/: inline_helpers.rs  panic.rs
webgpu-sumcheck/: Cargo.toml
webgpu-sumcheck/examples/: gpu_vs_cpu_bn254.rs  gpu_vs_cpu_u32.rs  gpu_vs_cpu_u64.rs
webgpu-sumcheck/shaders/: bn254_sum.wgsl  bn254_sum_u64.wgsl  u128_mul_sum.wgsl
webgpu-sumcheck/src/: main.rs
zklean-extractor/src/: constants.rs  flags.rs  instruction.rs  lookup_table.rs  main.rs  mle_ast.rs  r1cs.rs
(+149 files in other folders)
