[package]
name = "jolt-recursion"
version = "0.1.0"
edition = "2021"
description = "Recursion prover/verifier for Jolt, built on top of jolt-core stage APIs."
license-file = "../LICENSE-MIT"

[features]
default = ["host"]
host = ["jolt-core/host"]
experimental-pairing-recursion = []
allocative = ["jolt-core/allocative"]

[dependencies]
anyhow.workspace = true
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-grumpkin.workspace = true
ark-serialize.workspace = true
ark-std.workspace = true
allocative.workspace = true
derive_more.workspace = true
dory = { workspace = true, features = ["recursion"] }
itertools.workspace = true
jolt-optimizations.workspace = true
jolt-platform.workspace = true
num-traits.workspace = true
paste.workspace = true
rayon.workspace = true
thiserror.workspace = true
tracing.workspace = true

jolt-core = { workspace = true, default-features = false, features = ["minimal"] }
tracer = { workspace = true, default-features = false, features = ["std"] }

[dev-dependencies]
postcard.workspace = true
rand.workspace = true
serial_test.workspace = true
