[package]
name = "recursion"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "recursion"
path = "src/main.rs"

[features]
default = []

[dependencies]
jolt-sdk = { workspace = true, features = ["host"] }
jolt-core = { workspace = true, features = ["host", "recursion"] }
jolt-inlines-grumpkin = { workspace = true, features = ["host"] }
tracing-subscriber.workspace = true
tracing.workspace = true
ark-serialize.workspace = true
postcard.workspace = true
clap.workspace = true
